# xodus

./: .gitignore  Cargo.toml  README.md
.cargo/: config.toml
.github/workflows/: rust.yml
docs/: README.md
docs/xbox/: README.md  gamepass.md  xboxlive.md  xboxservices.md
docs/xodus/: README.md  architecture.md  device.md  licenses.md  login.md
msixvc/: Cargo.toml
msixvc/src/: common.rs  crypt.rs  lib.rs  math.rs  models.rs  streaming.rs  streaming_ntfs.rs  utils.rs  xsp.rs  xvd.rs
msixvc/src/models/: common.rs  enums.rs  xsp.rs
msixvc/src/models/structs/: parsed.rs
msixvc/src/models/xsp/: structs.rs
msixvc/src/models/xsp/structs/: parsed.rs  raw.rs
msixvc/src/models/xvd/: structs.rs
msixvc/src/models/xvd/structs/: parsed.rs  raw.rs
msixvc/src/utils/: common.rs  xsp.rs  xvd.rs
msxivc/: Cargo.toml
msxivc/src/: math.rs  utils.rs
proto/: xodus.gamingservices.proto
proto/xodus/: common.proto
scripts/: send_msa_token_request.py  send_xsts_token_request.py
xodus/: Cargo.toml  build.rs
xodus-cli/: Cargo.toml
xodus-cli/src/: commands.rs  device.rs  license.rs  main.rs  package.rs  user.rs  webview.rs
xodus-cli/src/commands/: download.rs  extract.rs  library.rs  license.rs  login.rs  streaming.rs  xsp.rs
xodus-service/: Cargo.toml
xodus-service/src/: device.rs  main.rs  simple_context.rs  user.rs  utils.rs
xodus-service/src/connection/: mod.rs  proto.rs  router.rs  xml.rs
xodus/src/: api.rs  auth.rs  device.rs  hardware.rs  lib.rs  models.rs  secrets.rs  tokens.rs
xodus/src/api/: live.rs
xodus/src/api/live/: mod.rs  utils.rs
xodus/src/api/xbox/: auth.rs  mod.rs  services.rs  title.rs
xodus/src/clep/: challenge.rs
xodus/src/licensing/: content.rs  splicense.rs  utils.rs
xodus/src/models/: clep.rs  devicecredential.rs  displaycatalog.rs  licensing.rs  live.rs  mod.rs  packagespc.rs  secrets.rs  soap.rs  user.rs  xbox.rs  xodus.rs
xodus/src/models/xbox/: subscriptions.rs
xodus/src/models/xgameruntime/: mod.rs  xuser.rs
xodus/src/models/xvd/: constants.rs  enums.rs  flags.rs  mod.rs  structs.rs
xodus/src/models/xvd/structs/: parsed.rs  raw.rs
xodus/src/tokens/: backend.rs  device.rs  manager.rs  store.rs
xodus/src/tokens/backend/: keychain.rs  memory.rs
xodus/src/xvd/: crypt.rs  math.rs  mod.rs  streaming.rs  streaming2.rs  streaming3.rs  streaming4.rs  streaming_ntfs.rs  utils.rs
