[package]
name = "xodus-service"
version = "0.1.0"
edition = "2024"

[dependencies]
xodus = { path = "../xodus" }
tokio = { workspace = true }
reqwest = { workspace = true }
chrono = { workspace = true }
quick-xml = { version = "0.40.1", features = ["serialize", "overlapped-lists"] }
log = "0.4.28"
env_logger = "0.11.8"
tokio-util = "0.7.18"
serde_json = "1.0.145"
