[package]
name = "xodus"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { workspace = true }
reqwest = { workspace = true }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
quick-xml = { version = "0.40.1", features = ["serialize", "overlapped-lists"] }
async-trait = "0.1.89"
log = "0.4.28"
chrono = { workspace = true }
base64 = "0.22.1"
rand = "0.10.0"
uuid = "1.23.1"
aes = "0.9.0"
keyring-core = { version = "1.0.0", features = ["sample"] }
dbus-secret-service-keyring-store = { version = "1.0.0", features = ["crypto-openssl"]}
zerocopy = { version = "0.8.48", features = ["derive"] }
bergshamra-c14n = "0.5.1"
hmac = "0.12.0"
bergshamra = "0.5.1"
rsa = "0.9.10"
cbc = "0.2.1"
url = "2.5.8"
aes-keywrap = "0.9.0"
p256 = "0.13.2"
sha2 = "0.11.0"

[dev-dependencies]
rsa = "0.9.10"
bergshamra = "0.5.1"
ed25519-dalek = "2.2.0"
